--- a/DacpacDiff.Core/DacpacDiff.Core.csproj
+++ b/DacpacDiff.Core/DacpacDiff.Core.csproj
@@ -6,4 +6,8 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+  </ItemGroup>
+
 </Project>
