--- a/DacpacDiff.Mssql.Tests/DacpacDiff.Mssql.Tests.csproj
+++ b/DacpacDiff.Mssql.Tests/DacpacDiff.Mssql.Tests.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\DacpacDiff.Comparer.Tests\TestHelpers\AssertExtensions.cs" Link="TestHelpers\AssertExtensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
@@ -18,6 +22,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DacpacDiff.Mssql\DacpacDiff.Mssql.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TestHelpers\" />
   </ItemGroup>
 
 </Project>
