--- a/DacpacDiff.Core.Tests/DacpacDiff.Core.Tests.csproj
+++ b/DacpacDiff.Core.Tests/DacpacDiff.Core.Tests.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-
+    <TargetFramework>net8.0</TargetFramework>
+	<LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
-
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
