--- a/DacpacDiff.Core/DacpacDiff.Core.csproj
+++ b/DacpacDiff.Core/DacpacDiff.Core.csproj
@@ -2,7 +2,8 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
+		<LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <Company>Neo Fintech Lab</Company>
