--- a/DacpacDiff.Mssql/DacpacDiff.Mssql.csproj
+++ b/DacpacDiff.Mssql/DacpacDiff.Mssql.csproj
@@ -2,9 +2,10 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFramework>net8.0</TargetFramework>
+		<LangVersion>latest</LangVersion>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
         <Company>Neo Fintech Lab</Company>
         <Authors>IFYates</Authors>
         <Version>0.2.3-beta</Version>
