--- a/DacpacDiff.Mssql/DacpacDiff.Mssql.csproj
+++ b/DacpacDiff.Mssql/DacpacDiff.Mssql.csproj
@@ -8,7 +8,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
         <Company>Neo Fintech Lab</Company>
         <Authors>IFYates</Authors>
-        <Version>0.2.3-beta</Version>
+        <Version>0.3.0</Version>
         <Copyright>(c) Neo Fintech Lab 2021</Copyright>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/neoftl/dacpac-diff</PackageProjectUrl>
@@ -16,8 +16,6 @@
         <RepositoryType>GitHub</RepositoryType>
         <PackageTags>dacpac,sql,release,mssql</PackageTags>
         <Description>MSSQL support for dacpac-diff.</Description>
-        <Copyright>(c) Neo Fintech Lab 2021</Copyright>
-        <Version>0.2.3-beta</Version>
         <Product>dd.MSSQL</Product>
     </PropertyGroup>
 
